[package]
name = "gag_combo_gen_web"
version = "0.1.1"
authors = ["Jon Doe <augiii@protonmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
gag_combo_gen = { path = "../gag_combo_gen", version = "*" }
hashbrown = "0.5.0"
lazy_static = "1.3.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = false
