[package]
name = "gag_combo_gen_web"
version = "0.2.1"
authors = ["Dr. Jonathan Helianthicus Doe, IV <augiii@protonmail.com>"]
edition = "2018"
description = """
Generates optimal single-cog gag combinations given user constraints \
(front-end)"""
homepage = "https://zz.nfshost.com/"
repository = "https://github.com/JonathanHelianthicusDoe/gag_combo_gen_web"
readme = "README.md"
keywords = ["toontown", "gag", "combo", "optimizer", "ttr"]
categories = ["Algorithms", "Games"]
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]

[dependencies]
fxhash = "0.2.1"
gag_combo_gen = { path = "../gag_combo_gen" }
lazy_static = "1.4.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = false
